Fix overflow in medium and mobile layout

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -226,6 +226,7 @@ img.medium-image {
 .social-media-icons {
     display: flex;
     gap: 1em;
+    overflow: hidden;
 }
 
 .social-media-icons > * {
@@ -356,6 +357,9 @@ p {
     max-width: 9em;
 }
 
+//
+// Medium screens and smaller
+//
 @media only screen and (max-width: 77em) {
 
     .main-container {
@@ -388,7 +392,10 @@ p {
     }
 }
 
-@media only screen and (max-width: 768px) {
+//
+// Mobile sized screens
+//
+@media only screen and (max-width: 868px) {
 
     main {
         width: 100%;
